--- a/style.css
+++ b/style.css
@@ -37,24 +37,16 @@ header
 
 figure
 {
-    /* 26/02 float:left;*/
-    /*padding-top: 40px;*/
+   
     margin: 0;
 }
 .imageflotante
 {
-  /* 26/02 margin-left:20px;*/
+  
   margin-top: 20px;
 }
 
-/* 26/02table.navigation 
-{
-    display:flex;
-    justify-content: flex-end;
-    
-    border-collapse: collapse;
-    
-}*/
+
 nav
 {
     display: flex;
@@ -72,7 +64,6 @@ nav
     border-top:1.5px solid transparent;
     line-height: 65px;
     text-align: center;
-    /*width: 40%;*/
     font-size: 0.9em;
 }
 .lol:hover
@@ -102,7 +93,7 @@ a:visited{color:rgb(127, 176, 250 );}
 h1
 {
     clear:both;
-    padding-top: 0/*20*/px;
+    padding-top: 0px;
     color: rgb(0,0,0)
 }
 h1+p
@@ -138,7 +129,6 @@ input:focus {
     border-radius: 0 15px 15px 0;
     color:white;
     background-color: #0065FC;
-    border-radius:px;
     padding: 15px;
     
     
@@ -411,7 +401,7 @@ td.research_image{
 
 
 /*---------------------------------footer du corps-----------------------------*/
-figcaption
+.actmarseille_panneau_conteneur_text_description
 {
     font-family: "ralewaybold";
     font-size: 0.8em;
@@ -458,7 +448,7 @@ figcaption
     width:100%;
     height:300px;
     overflow: hidden;
-    overflow: contain;
+    
 }
 .actmarseille_panneau_conteneur_vignette_img
 {
@@ -496,7 +486,7 @@ figcaption
     width: 100%;
     height: 140px;
     overflow: hidden;
-    overflow: contain;
+    
 
     
 }
@@ -523,7 +513,7 @@ figcaption
     width: 100%;
     height: 85px;
     overflow: hidden;
-    overflow: contain;
+    
     
 }
 .actmarseille_panneau_conteneur2_2bis_vignette_img
