couleur filtre visité

--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ td.research_image{
 }
 .filtre_text_lien:visited
 {
-    color: #61a0ff;
+    color: black;
 }
 
 /*---------------------------Ligne info---------*/
