--- a/style.css
+++ b/style.css
@@ -175,6 +175,7 @@ td.research_image{
     background-color: rgb(235, 235, 235);
     border-radius: 15px 0 0 15px;
     padding: 15px;
+    text-align: center;
     
 }
 .research_bouton_mobil
